Wed Jun 23 15:16:20 BST 2004 (trog)
-----------------------------------
  * libclamav/ole2_extract.c: fix possible mmap overrun.

Tue Jun 22 18:47:32 CEST 2004 (tk)
----------------------------------
  * clamdscan: support multiple arguments on command line (requested by
	       Dan Egli <dan*eglifamily.dnsalias.net>); major cleanup

Tue Jun 22 11:58:06 BST 2004 (njh/trog)
---------------------------------------
  * libclamav/str.c:	Rewrote cli_chomp() as discussed in the clamav-devel
  	mailing list

Tue Jun 22 05:09:54 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Avoid unlocking an already unlocked mutex in
	clamfi_abort
			Removed compilation warning in FreeBSD5.2
  * libclamav:		Call cli_chomp() twice to ensure \r is also removed in
  	emails
  			Optimise handling of blank lines in emails
			Trialing Andrey J. Melnikoff (TEMHOTA)
	<temnota@kmv.ru>'s patch to print stack trace on SIGSEGV. Tidied,
	optimised and applied the patch. Comments welcome.

Tue Jun 22 00:35:38 EDT 2004 (tk)
---------------------------------
  * libclamav: reverse the last patch and fix glibc issue in more
	       suitable way

Mon Jun 21 21:20:47 EDT 2004 (tk)
---------------------------------
  * libclamav: scanners: prevent division by zero in compression ratio
	       calculation of broken zips (patch by Trog)
  * clamd: fix logic error that prevented all files from being scanned if
	   there was no /proc filesystem on Linux system (patch by
	   Scott Gifford <sgifford*suspectclass.com>)
  * libclamav: fix compilation error with old glibc (patch by Zeffie
	       <zeffie*zeffie.com>)

Mon Jun 21 16:23:07 BST 2004 (trog)
-----------------------------------
  * libclamac/ole2_extract.c: Don't try and process (probably corrupt) files
	with untested parameters, issue a warning instead.

Mon Jun 21 11:21:48 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:		Fix crash when a multipart/mixed message