@@ -1,3 +1,8 @@
+Wed Jun 23 17:23:59 BST 2004 (njh)
+----------------------------------
+  * libclamav/mbox.c:	Further optimisation in the handling of empty lines
+  	in emails
+
 Wed Jun 23 15:16:20 BST 2004 (trog)
 -----------------------------------
   * libclamav/ole2_extract.c: fix possible mmap overrun.
